--- a/MemoriaFlora/Storyboards/Base.lproj/Main.storyboard
+++ b/MemoriaFlora/Storyboards/Base.lproj/Main.storyboard
@@ -71,7 +71,7 @@
                                 <rect key="frame" x="0.0" y="47" width="428" height="845"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2sf-jF-pKG">
-                                        <rect key="frame" x="0.0" y="0.0" width="428" height="721.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="428" height="835"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Zeg-ge-ebP">
                                                 <rect key="frame" x="0.0" y="32" width="428" height="200"/>
@@ -301,26 +301,39 @@
                                                     <constraint firstAttribute="height" constant="70" id="Z0x-v3-nIN"/>
                                                 </constraints>
                                             </stackView>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="1NQ-nB-15o">
+                                                <rect key="frame" x="32" y="697.33333333333337" width="364" height="87.666666666666629"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" priority="250" constant="87.670000000000002" id="J54-nV-lS2"/>
+                                                </constraints>
+                                                <color key="textColor" systemColor="labelColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="l3H-3w-rV9" firstAttribute="centerX" secondItem="2sf-jF-pKG" secondAttribute="centerX" id="0ef-d4-J7F"/>
                                             <constraint firstItem="SPL-io-PNg" firstAttribute="leading" secondItem="Cxg-P6-U83" secondAttribute="trailing" constant="4" id="43R-hf-fzz"/>
+                                            <constraint firstAttribute="trailing" secondItem="1NQ-nB-15o" secondAttribute="trailing" constant="32" id="53x-j2-xaf"/>
                                             <constraint firstItem="Cxg-P6-U83" firstAttribute="top" secondItem="kJ8-Ji-HGi" secondAttribute="bottom" constant="27.666666666666742" id="BM6-RG-1NC"/>
                                             <constraint firstAttribute="trailing" secondItem="pxZ-QP-Vgo" secondAttribute="trailing" constant="24" id="BZc-ei-gY8"/>
                                             <constraint firstItem="pxZ-QP-Vgo" firstAttribute="top" secondItem="Zeg-ge-ebP" secondAttribute="bottom" constant="24" id="Hrs-G6-h76"/>
+                                            <constraint firstAttribute="bottom" secondItem="1NQ-nB-15o" secondAttribute="bottom" constant="50" id="IyL-T6-nAq"/>
                                             <constraint firstAttribute="trailing" secondItem="Zeg-ge-ebP" secondAttribute="trailing" id="JQm-3w-Znu"/>
                                             <constraint firstItem="SPL-io-PNg" firstAttribute="centerY" secondItem="Cxg-P6-U83" secondAttribute="centerY" constant="-2" id="L9S-mA-UNv"/>
                                             <constraint firstItem="kJ8-Ji-HGi" firstAttribute="leading" secondItem="2sf-jF-pKG" secondAttribute="leading" constant="40" id="NPa-gE-u7I"/>
                                             <constraint firstItem="Cxg-P6-U83" firstAttribute="centerX" secondItem="kJ8-Ji-HGi" secondAttribute="centerX" constant="-70" id="O6O-Fm-ujV"/>
                                             <constraint firstItem="Zeg-ge-ebP" firstAttribute="leading" secondItem="2sf-jF-pKG" secondAttribute="leading" id="PP2-QJ-80L"/>
                                             <constraint firstItem="Zeg-ge-ebP" firstAttribute="top" secondItem="2sf-jF-pKG" secondAttribute="top" constant="32" id="WHx-Hj-ede"/>
+                                            <constraint firstItem="1NQ-nB-15o" firstAttribute="top" secondItem="l3H-3w-rV9" secondAttribute="bottom" constant="16" id="b1K-dV-Bah"/>
+                                            <constraint firstItem="1NQ-nB-15o" firstAttribute="leading" secondItem="2sf-jF-pKG" secondAttribute="leading" constant="32" id="eOP-g5-iZK"/>
                                             <constraint firstItem="l3H-3w-rV9" firstAttribute="top" secondItem="SPL-io-PNg" secondAttribute="bottom" constant="16" id="vPv-uu-0CR"/>
                                             <constraint firstItem="vyR-FW-sd3" firstAttribute="top" secondItem="SPL-io-PNg" secondAttribute="bottom" constant="-22.333333333333371" id="vgu-t9-iOr"/>
                                             <constraint firstItem="pxZ-QP-Vgo" firstAttribute="leading" secondItem="2sf-jF-pKG" secondAttribute="leading" constant="24" id="vrC-yx-fxm"/>
                                             <constraint firstItem="vyR-FW-sd3" firstAttribute="centerX" secondItem="SPL-io-PNg" secondAttribute="centerX" id="vzI-xh-na3"/>
                                             <constraint firstItem="kJ8-Ji-HGi" firstAttribute="top" secondItem="pxZ-QP-Vgo" secondAttribute="bottom" constant="16" id="wIs-TB-W7X"/>
-                                            <constraint firstAttribute="bottom" secondItem="l3H-3w-rV9" secondAttribute="bottom" constant="40" id="y0K-hq-kSu"/>
                                             <constraint firstAttribute="trailing" secondItem="kJ8-Ji-HGi" secondAttribute="trailing" constant="40" id="zV7-aH-2ir"/>
                                         </constraints>
                                     </view>
@@ -349,6 +362,7 @@
                     <navigationItem key="navigationItem" title="HOME" id="Hmw-Lo-Hn3"/>
                     <connections>
                         <outlet property="emailTextField" destination="7Iq-n7-kgO" id="TSr-d4-ch4"/>
+                        <outlet property="linkTextView" destination="1NQ-nB-15o" id="txS-mB-AeB"/>
                         <outlet property="passwordTextField" destination="gId-xP-f5B" id="gR6-1m-B41"/>
                         <outlet property="rememberMeSwitchButton" destination="pGQ-N9-VAC" id="kiX-no-Ern"/>
                     </connections>
@@ -1122,34 +1136,34 @@
             <size key="intrinsicContentSize" width="62.666666666666664" height="31"/>
         </designable>
         <designable name="1ML-bR-zWx">
-            <size key="intrinsicContentSize" width="69.666666666666671" height="18.666666666666668"/>
+            <size key="intrinsicContentSize" width="39.333333333333336" height="18.666666666666668"/>
         </designable>
         <designable name="53K-6w-u2E">
             <size key="intrinsicContentSize" width="126.33333333333333" height="31"/>
         </designable>
         <designable name="7Iq-n7-kgO">
-            <size key="intrinsicContentSize" width="69.666666666666671" height="18.666666666666668"/>
+            <size key="intrinsicContentSize" width="39.333333333333336" height="18.666666666666668"/>
         </designable>
         <designable name="Ex3-c9-UZt">
             <size key="intrinsicContentSize" width="142.33333333333334" height="31"/>
         </designable>
         <designable name="G13-0r-Imo">
-            <size key="intrinsicContentSize" width="154" height="17"/>
+            <size key="intrinsicContentSize" width="124" height="17"/>
         </designable>
         <designable name="Mwy-1R-oOI">
-            <size key="intrinsicContentSize" width="97.333333333333329" height="17"/>
+            <size key="intrinsicContentSize" width="67.333333333333329" height="17"/>
         </designable>
         <designable name="S9z-cU-kgg">
-            <size key="intrinsicContentSize" width="72.666666666666671" height="18.666666666666668"/>
+            <size key="intrinsicContentSize" width="42.333333333333336" height="18.666666666666668"/>
         </designable>
         <designable name="VW9-dF-nZa">
             <size key="intrinsicContentSize" width="133.33333333333334" height="31"/>
         </designable>
         <designable name="gId-xP-f5B">
-            <size key="intrinsicContentSize" width="97.333333333333329" height="17"/>
+            <size key="intrinsicContentSize" width="67.333333333333329" height="17"/>
         </designable>
         <designable name="xIz-3y-SMq">
-            <size key="intrinsicContentSize" width="69.666666666666671" height="18.666666666666668"/>
+            <size key="intrinsicContentSize" width="39.333333333333336" height="18.666666666666668"/>
         </designable>
         <designable name="zPS-Bu-6Cq">
             <size key="intrinsicContentSize" width="90.666666666666671" height="37"/>
