--- a/MemoriaFlora/Storyboards/Base.lproj/Main.storyboard
+++ b/MemoriaFlora/Storyboards/Base.lproj/Main.storyboard
@@ -808,7 +808,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="rCM-c0-vD2">
-                                <rect key="frame" x="0.0" y="146" width="428" height="746"/>
+                                <rect key="frame" x="0.0" y="194" width="428" height="698"/>
                                 <color key="backgroundColor" red="0.96862745098039216" green="0.96862745098039216" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QU2-qL-dib">
@@ -826,25 +826,59 @@
                                     <constraint firstAttribute="width" constant="240" id="Yyg-Wz-6S6"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Z0-hn-ydH">
+                                <rect key="frame" x="32" y="146" width="364" height="40"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6i4-Jw-c3a">
+                                        <rect key="frame" x="16" y="0.0" width="294" height="40"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vyg-D8-Gbr">
+                                        <rect key="frame" x="318" y="5" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="odG-cb-gOx"/>
+                                            <constraint firstAttribute="width" constant="30" id="owg-Df-npK"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="ic_search" title=" " subtitle=" "/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="6i4-Jw-c3a" firstAttribute="top" secondItem="0Z0-hn-ydH" secondAttribute="top" id="2DR-5f-2tz"/>
+                                    <constraint firstItem="Vyg-D8-Gbr" firstAttribute="centerY" secondItem="0Z0-hn-ydH" secondAttribute="centerY" id="94c-QT-Soa"/>
+                                    <constraint firstItem="6i4-Jw-c3a" firstAttribute="leading" secondItem="0Z0-hn-ydH" secondAttribute="leading" constant="16" id="Jys-I7-8i3"/>
+                                    <constraint firstAttribute="trailing" secondItem="Vyg-D8-Gbr" secondAttribute="trailing" constant="16" id="c8b-VB-F5D"/>
+                                    <constraint firstItem="Vyg-D8-Gbr" firstAttribute="leading" secondItem="6i4-Jw-c3a" secondAttribute="trailing" constant="8" id="iZM-Nf-5vM"/>
+                                    <constraint firstAttribute="height" constant="40" id="qqt-6P-Z5c"/>
+                                    <constraint firstAttribute="bottom" secondItem="6i4-Jw-c3a" secondAttribute="bottom" id="yAY-VU-RcM"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="R9f-eU-AoL"/>
                         <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="0Z0-hn-ydH" firstAttribute="leading" secondItem="R9f-eU-AoL" secondAttribute="leading" constant="32" id="6cW-XI-x6S"/>
                             <constraint firstItem="R9f-eU-AoL" firstAttribute="bottom" secondItem="rCM-c0-vD2" secondAttribute="bottom" id="87K-kQ-fzT"/>
+                            <constraint firstItem="rCM-c0-vD2" firstAttribute="top" secondItem="0Z0-hn-ydH" secondAttribute="bottom" constant="8" id="ANC-Ns-kv3"/>
                             <constraint firstItem="R9f-eU-AoL" firstAttribute="trailing" secondItem="5Hj-j1-bGt" secondAttribute="trailing" id="KTe-KF-DIx"/>
                             <constraint firstItem="rCM-c0-vD2" firstAttribute="leading" secondItem="R9f-eU-AoL" secondAttribute="leading" id="MbK-EO-I0n"/>
                             <constraint firstItem="5Hj-j1-bGt" firstAttribute="leading" secondItem="R9f-eU-AoL" secondAttribute="leading" id="Qu9-hh-ilE"/>
                             <constraint firstItem="Eeq-Ev-lw4" firstAttribute="centerX" secondItem="5TJ-lA-hej" secondAttribute="centerX" id="ULP-Le-qvR"/>
-                            <constraint firstItem="rCM-c0-vD2" firstAttribute="top" secondItem="5Hj-j1-bGt" secondAttribute="bottom" constant="16" id="VEA-ca-M4e"/>
                             <constraint firstItem="Eeq-Ev-lw4" firstAttribute="centerY" secondItem="5TJ-lA-hej" secondAttribute="centerY" id="cv4-8W-jB5"/>
                             <constraint firstItem="R9f-eU-AoL" firstAttribute="bottom" secondItem="QU2-qL-dib" secondAttribute="bottom" constant="40" id="dZR-UT-VbU"/>
+                            <constraint firstItem="0Z0-hn-ydH" firstAttribute="top" secondItem="5Hj-j1-bGt" secondAttribute="bottom" constant="16" id="dag-Yt-hpu"/>
                             <constraint firstItem="R9f-eU-AoL" firstAttribute="trailing" secondItem="rCM-c0-vD2" secondAttribute="trailing" id="fMg-BC-5sK"/>
                             <constraint firstItem="R9f-eU-AoL" firstAttribute="trailing" secondItem="QU2-qL-dib" secondAttribute="trailing" constant="30" id="qkD-sI-jq2"/>
+                            <constraint firstItem="R9f-eU-AoL" firstAttribute="trailing" secondItem="0Z0-hn-ydH" secondAttribute="trailing" constant="32" id="tNx-pi-D4d"/>
                             <constraint firstItem="5Hj-j1-bGt" firstAttribute="top" secondItem="5TJ-lA-hej" secondAttribute="top" id="u7k-v9-Xhr"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="emptyListImageView" destination="Eeq-Ev-lw4" id="Q8w-We-ZIS"/>
+                        <outlet property="searchTextField" destination="6i4-Jw-c3a" id="cly-JS-Oqy"/>
+                        <outlet property="searchView" destination="0Z0-hn-ydH" id="5ci-3g-wII"/>
                         <outlet property="tableView" destination="rCM-c0-vD2" id="oUr-dm-1vI"/>
                         <outlet property="userProfileImageView" destination="0tS-f5-idG" id="UDV-4z-2WL"/>
                     </connections>
@@ -1173,6 +1207,7 @@
         <image name="ic_create" width="57" height="57"/>
         <image name="ic_grave" width="368" height="559"/>
         <image name="ic_profile" width="96" height="96"/>
+        <image name="ic_search" width="30" height="30"/>
         <image name="login_facebook" width="70" height="70"/>
         <image name="login_google" width="70" height="70"/>
         <image name="logo" width="412" height="325"/>
