--- a/MemoriaFlora/ViewControllers/Condolence/CondolenceTableViewCell.xib
+++ b/MemoriaFlora/ViewControllers/Condolence/CondolenceTableViewCell.xib
@@ -21,7 +21,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MNa-2P-zmq">
                         <rect key="frame" x="16" y="8" width="321" height="70"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WhD-k9-2wZ">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WhD-k9-2wZ">
                                 <rect key="frame" x="16" y="10" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="nxH-Ch-7qe"/>
