--- a/MemoriaFlora/Storyboards/Flowers.storyboard
+++ b/MemoriaFlora/Storyboards/Flowers.storyboard
@@ -426,7 +426,7 @@
                                                     <constraint firstAttribute="height" constant="47" id="573-ou-34g"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="SFProText-Regular" family="SF Pro Text" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                             </textField>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
